tests/NormalTests/paczka1/fuzzy1/48459824.err
Error in line 7: ancnxQM S510 24,7
Error in line 12: tyLUH0gr A899 68,6
Error in line 8: ancnxQM A899 64,8
Error in line 20: ancnxQM S148 15,3
Error in line 26: uGdGIz1 S510 80,9
Error in line 27: ns3 S148 62,8
